--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
           <div class="dropdown"></div>
         </div>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
+          <div class="dropdown-item">
+            <div class="dropdown">
+              <button class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Change profile
+              </button>
+
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
@@ -34,8 +48,8 @@
       </div>
 
       <div class="main-nav__toggle">
-        <label for="ideas" class="main-nav__toggle-form-check">Ideas
-          <input type="checkbox" name="ideas" id="ideas">
+        <label for="idea" class="main-nav__toggle-form-check">Ideas
+          <input type="checkbox" name="idea" id="idea">
           <span class="checkmark"></span>
         </label>
 
@@ -140,126 +154,178 @@
 
   </header>
 
-  <main class="container">
-    <div class="search-add__field text-center">
+  <main id="main" class="container">
+    <form id="addIdea" class="search-add__field text-center">
       <input type="search" name="search" id="search" class="search-add__field-input"
         placeholder="search or enter new ideas" aria-label="Search">
       <button class="search-add__field-btn" type="submit"><span class="d-none d-sm-inline">Create</span> <img
           src="images/plus.svg" alt="Make icon" width="20" height="20" class="d-inline d-sm-none"> </button>
-    </div>
+    </form>
 
-    <article class="card-block">
-      <div class="card-block__body">
-        <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
-          readable
-        </p>
-        <div class="collapsible-menu d-flex d-sm-none">
-          <button class="collapsible-menu-icon">
-            <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
-          </button>
+    <section id="main-content">
+      <!-- <article class="card-block">
+        <div class="card-block__body">
+          <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
+            readable
+          </p>
+          <div class="collapsible-menu d-flex d-sm-none">
+            <button class="collapsible-menu-icon">
+              <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
+            </button>
+          </div>
+          <div class="card-block__body-icons d-none d-sm-flex">
+            <button class="card-block__body-icon">
+              <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+          </div>
         </div>
-        <div class="card-block__body-icons d-none d-sm-flex">
-          <button class="card-block__body-icon">
-            <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-        </div>
-      </div>
-    </article>
+      </article>
 
-    <article class="card-block in-progress">
-      <div class="card-block__head">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
-            aria-valuemax="100">10%</div>
+      <article class="card-block in-progress">
+        <div class="card-block__head">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
+              aria-valuemax="100">10%</div>
+          </div>
         </div>
-      </div>
-      <div class="card-block__body">
-        <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
-          readable
-        </p>
-        <div class="collapsible-menu d-flex d-sm-none">
-          <button class="collapsible-menu-icon">
-            <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
-          </button>
+        <div class="card-block__body">
+          <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
+            readable
+          </p>
+          <div class="collapsible-menu d-flex d-sm-none">
+            <button class="collapsible-menu-icon">
+              <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
+            </button>
+          </div>
+          <div class="card-block__body-icons d-none d-sm-flex">
+            <button class="card-block__body-icon">
+              <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+          </div>
         </div>
-        <div class="card-block__body-icons d-none d-sm-flex">
-          <button class="card-block__body-icon">
-            <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-        </div>
-      </div>
-    </article>
+      </article>
 
-    <article class="card-block in-progress open">
-      <div class="card-block__head">
-        <div class="progress">
-          <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
-            aria-valuemax="100">10%</div>
+      <article class="card-block in-progress open">
+        <div class="card-block__head">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
+              aria-valuemax="100">10%</div>
+          </div>
         </div>
-      </div>
-      <div class="card-block__body">
-        <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
-          readable</p>
-        <div class="collapsible-menu d-flex d-sm-none">
-          <button class="collapsible-menu-icon">
-            <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
-          </button>
+        <div class="card-block__body">
+          <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
+            readable</p>
+          <div class="collapsible-menu d-flex d-sm-none">
+            <button class="collapsible-menu-icon">
+              <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
+            </button>
+          </div>
+          <div class="card-block__body-icons d-none d-sm-flex">
+            <button class="card-block__body-icon">
+              <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+          </div>
         </div>
-        <div class="card-block__body-icons d-none d-sm-flex">
-          <button class="card-block__body-icon">
-            <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
+        <div class="card-block__panel">
+          <button class="add">Add notes</button>
+          <button class="delete">Delete Idea</button>
         </div>
-      </div>
-      <div class="card-block__panel">
-        <button class="add">Add notes</button>
-        <button class="delete">Delete Idea</button>
-      </div>
-    </article>
+      </article>
 
-    <article class="card-block">
-      <div class="card-block__body">
-        <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
-          readable
-        </p>
-        <div class="collapsible-menu d-flex d-sm-none">
-          <button class="collapsible-menu-icon">
-            <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
-          </button>
+      <article class="card-block in-progress open">
+        <div class="card-block__head">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0"
+              aria-valuemax="100">10%</div>
+          </div>
         </div>
-        <div class="card-block__body-icons d-none d-sm-flex">
-          <button class="card-block__body-icon">
-            <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
-          <button class="card-block__body-icon">
-            <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
-          </button>
+        <div class="card-block__body">
+          <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
+            readable</p>
+          <div class="collapsible-menu d-flex d-sm-none">
+            <button class="collapsible-menu-icon">
+              <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
+            </button>
+          </div>
+          <div class="card-block__body-icons d-none d-sm-flex">
+            <button class="card-block__body-icon">
+              <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+          </div>
         </div>
-      </div>
-    </article>
+        <div class="card-block__panel">
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Project name</label>
+                <input type="text" class="form-control" id="name" name="name"
+                  value="It is a long established fact that a reader will be distracted by the readable">
+              </div>
+              <div class="form-group">
+                <label for="name">Project notes</label>
+                <textarea name="notes" id="notes" class="form-control"></textarea>
+              </div>
+            </div>
+          </div>
+
+          <button class="save">Save</button>
+          <button class="delete">Delete Idea</button>
+        </div>
+      </article>
+
+      <article class="card-block">
+        <div class="card-block__body">
+          <p class="card-block__body-text">It is a long established fact that a reader will be distracted by the
+            readable
+          </p>
+          <div class="collapsible-menu d-flex d-sm-none">
+            <button class="collapsible-menu-icon">
+              <img src="images/dot-menu.svg" alt="Make icon" width="20" height="20" class="collapsible-menu-icon-img">
+            </button>
+          </div>
+          <div class="card-block__body-icons d-none d-sm-flex">
+            <button class="card-block__body-icon">
+              <img src="images/hammer.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/chat-box.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+            <button class="card-block__body-icon">
+              <img src="images/close.svg" alt="Make icon" width="20" height="20" class="card-block__body-icon-img">
+            </button>
+          </div>
+        </div>
+      </article> -->
+    </section>
 
   </main>
+
+  <script src="modules/content.js"></script>
 
   <!-- JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
