--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <div class="dropdown-item">
             <div class="dropdown">
-              <button class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Change profile
-              </button>
+              <div class="btn-group dropright">
+                <button class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Change profile
+                </button>
 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Hardnut Advertising</a>
+                  <a class="dropdown-item" href="#">GP Group</a>
+                  <a class="dropdown-item" href="#">AutoGrow</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Settings</a>
+          <a class="dropdown-item" href="#">Logout</a>
         </div>
       </div>
       </div>
