fixing images relative path

--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
         </a>
         <article class="sidebar__card-group">
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>Ideas Feed</font>
           </div>
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>Ideas Library</font>
           </div>
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>Marketplace</font>
           </div>
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>My Tasks</font>
           </div>
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>My Team</font>
           </div>
           <div class="sidebar__card-item">
-            <img src="/images/img.svg" alt="62" sizes="62">
+            <img src="images/img.svg" alt="62" sizes="62">
             <font>Emails</font>
           </div>
         </article>
@@ -122,15 +122,15 @@
           <h2>Admin</h2>
           <div class="sidebar__card-group">
             <div class="sidebar__card-item">
-              <img src="/images/img.svg" alt="62" sizes="62">
+              <img src="images/img.svg" alt="62" sizes="62">
               <font>Users</font>
             </div>
             <div class="sidebar__card-item">
-              <img src="/images/img.svg" alt="62" sizes="62">
+              <img src="images/img.svg" alt="62" sizes="62">
               <font>Businesses</font>
             </div>
             <div class="sidebar__card-item">
-              <img src="/images/img.svg" alt="62" sizes="62">
+              <img src="images/img.svg" alt="62" sizes="62">
               <font>Stats</font>
             </div>
           </div>
@@ -140,11 +140,11 @@
           <h2>Trainings</h2>
           <div class="sidebar__card-group">
             <div class="sidebar__card-item">
-              <img src="/images/img.svg" alt="62" sizes="62">
+              <img src="images/img.svg" alt="62" sizes="62">
               <font>Conversion Pack</font>
             </div>
             <div class="sidebar__card-item">
-              <img src="/images/img.svg" alt="62" sizes="62">
+              <img src="images/img.svg" alt="62" sizes="62">
               <font>Diagram Pack</font>
             </div>
           </div>
